{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 755,
  "lineage": "69c6bbee-0ff7-0ea8-30f7-c055d51f35d8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:209436264718:loadbalancer/app/apache-alb/0e218c3deb5c164b",
            "arn_suffix": "app/apache-alb/0e218c3deb5c164b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "apache-alb-692333941.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:209436264718:loadbalancer/app/apache-alb/0e218c3deb5c164b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "apache-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-018cdaf92198b1f1d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07f6c9f2767aa9bce"
              },
              {
                "subnet_id": "subnet-0d6ffd8f47bbbd274"
              },
              {
                "subnet_id": "subnet-0e50a5d2f23ebc9d8"
              }
            ],
            "subnets": [
              "subnet-07f6c9f2767aa9bce",
              "subnet-0d6ffd8f47bbbd274",
              "subnet-0e50a5d2f23ebc9d8"
            ],
            "vpc_id": "vpc-04289e41072328e2c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_subnet.public_subnet_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:209436264718:listener/app/apache-alb/0e218c3deb5c164b/e86869e3fb9e314d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:209436264718:targetgroup/apache-tg/c4d061bcda1cb070",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:209436264718:listener/app/apache-alb/0e218c3deb5c164b/e86869e3fb9e314d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:209436264718:loadbalancer/app/apache-alb/0e218c3deb5c164b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.tg",
            "aws_security_group.alb-sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_subnet.public_subnet_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:209436264718:targetgroup/apache-tg/c4d061bcda1cb070",
            "arn_suffix": "targetgroup/apache-tg/c4d061bcda1cb070",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:209436264718:targetgroup/apache-tg/c4d061bcda1cb070",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "apache-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04289e41072328e2c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c699d364851172bc",
            "association_id": "eipassoc-068d404ba12ea2ce7",
            "domain": "vpc",
            "id": "eipalloc-0c699d364851172bc",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-053180b18532738c8",
            "private_dns": "ip-10-0-12-101.eu-west-1.compute.internal",
            "private_ip": "10.0.12.101",
            "public_dns": "ec2-52-16-15-231.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.16.15.231",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "wordpress_apache-nat-eip"
            },
            "tags_all": {
              "Name": "wordpress_apache-nat-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:209436264718:internet-gateway/igw-0f6ecc838059f580a",
            "id": "igw-0f6ecc838059f580a",
            "owner_id": "209436264718",
            "tags": {
              "Name": "wordpress_apache-igw"
            },
            "tags_all": {
              "Name": "wordpress_apache-igw"
            },
            "vpc_id": "vpc-04289e41072328e2c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c699d364851172bc",
            "association_id": "eipassoc-068d404ba12ea2ce7",
            "connectivity_type": "public",
            "id": "nat-092a774f7ab1d92a5",
            "network_interface_id": "eni-053180b18532738c8",
            "private_ip": "10.0.12.101",
            "public_ip": "52.16.15.231",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d6ffd8f47bbbd274",
            "tags": {
              "Name": "wordpress_apache-nat-gateway"
            },
            "tags_all": {
              "Name": "wordpress_apache-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:209436264718:route-table/rtb-00df6f7929076a653",
            "id": "rtb-00df6f7929076a653",
            "owner_id": "209436264718",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f6ecc838059f580a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpress_apache-public-rt"
            },
            "tags_all": {
              "Name": "wordpress_apache-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04289e41072328e2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:209436264718:route-table/rtb-068b76339178ed58a",
            "id": "rtb-068b76339178ed58a",
            "owner_id": "209436264718",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-092a774f7ab1d92a5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpress_apache-private-rt"
            },
            "tags_all": {
              "Name": "wordpress_apache-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04289e41072328e2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.main",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbe6eb0c99f52897",
            "route_table_id": "rtb-068b76339178ed58a",
            "subnet_id": "subnet-0d1f9086511a99bc8"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.main",
            "aws_route_table.private-rt",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070a7e9a90a8a2e27",
            "route_table_id": "rtb-068b76339178ed58a",
            "subnet_id": "subnet-0d6f0c1a20d1dd69c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.main",
            "aws_route_table.private-rt",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a53867c8eb48688b",
            "route_table_id": "rtb-068b76339178ed58a",
            "subnet_id": "subnet-028ca6b71d87827e2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.main",
            "aws_route_table.private-rt",
            "aws_subnet.private_subnet_3",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0849a802cbe299eb6",
            "route_table_id": "rtb-00df6f7929076a653",
            "subnet_id": "subnet-0d6ffd8f47bbbd274"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.main",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d728d3738d66ea2",
            "route_table_id": "rtb-00df6f7929076a653",
            "subnet_id": "subnet-0e50a5d2f23ebc9d8"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.main",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a8d11688c9941bf",
            "route_table_id": "rtb-00df6f7929076a653",
            "subnet_id": "subnet-07f6c9f2767aa9bce"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.main",
            "aws_subnet.public_subnet_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:209436264718:security-group/sg-0ccddce44a1deacb7",
            "description": "apache-ec2-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ccddce44a1deacb7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-018cdaf92198b1f1d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "apache-ec2-sg",
            "name_prefix": "",
            "owner_id": "209436264718",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_security_group"
            },
            "tags_all": {
              "Name": "ec2_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04289e41072328e2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:209436264718:security-group/sg-018cdaf92198b1f1d",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018cdaf92198b1f1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_security_group",
            "name_prefix": "",
            "owner_id": "209436264718",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_security_group"
            },
            "tags_all": {
              "Name": "alb_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04289e41072328e2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:209436264718:subnet/subnet-0d1f9086511a99bc8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1f9086511a99bc8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "209436264718",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress_apache-private-subnet-1"
            },
            "tags_all": {
              "Name": "wordpress_apache-private-subnet-1"
            },
            "vpc_id": "vpc-04289e41072328e2c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:209436264718:subnet/subnet-0d6f0c1a20d1dd69c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6f0c1a20d1dd69c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "209436264718",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress_apache-private-subnet-2"
            },
            "tags_all": {
              "Name": "wordpress_apache-private-subnet-2"
            },
            "vpc_id": "vpc-04289e41072328e2c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:209436264718:subnet/subnet-028ca6b71d87827e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028ca6b71d87827e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "209436264718",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress_apache-private-subnet-3"
            },
            "tags_all": {
              "Name": "wordpress_apache-private-subnet-3"
            },
            "vpc_id": "vpc-04289e41072328e2c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:209436264718:subnet/subnet-0d6ffd8f47bbbd274",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6ffd8f47bbbd274",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "209436264718",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress_apache-public-subnet-1"
            },
            "tags_all": {
              "Name": "wordpress_apache-public-subnet-1"
            },
            "vpc_id": "vpc-04289e41072328e2c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:209436264718:subnet/subnet-0e50a5d2f23ebc9d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e50a5d2f23ebc9d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "209436264718",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress_apache-public-subnet-2"
            },
            "tags_all": {
              "Name": "wordpress_apache-public-subnet-2"
            },
            "vpc_id": "vpc-04289e41072328e2c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:209436264718:subnet/subnet-07f6c9f2767aa9bce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f6c9f2767aa9bce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "209436264718",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress_apache-public-subnet-3"
            },
            "tags_all": {
              "Name": "wordpress_apache-public-subnet-3"
            },
            "vpc_id": "vpc-04289e41072328e2c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:209436264718:vpc/vpc-04289e41072328e2c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bd357116f152847a",
            "default_route_table_id": "rtb-0398f87db7563b8ee",
            "default_security_group_id": "sg-0ccdb925089ea3704",
            "dhcp_options_id": "dopt-022e1742fcf512343",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04289e41072328e2c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0398f87db7563b8ee",
            "owner_id": "209436264718",
            "tags": {
              "Name": "wordpress_apache-vpc"
            },
            "tags_all": {
              "Name": "wordpress_apache-vpc"
            }
          }
        }
      ]
    }
  ]
}